# wotc-scraper-gcp

./: .gitignore  README.md
.github/workflows/: articleservice_CI.yml
ArticleLib/src/: ArticleHandler.py
ArticleLib/tests/: test_mtg_article_pytest.py
ArticleService/: .flake8  .pylintrc  checks_local_dev.sh  gcp_reg_setup.txt  gcp_wfi_setup.txt  gcp_wif_setup.txt  increment.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
ArticleService/src/: ArticleHandler.py  GCPHandler.py  LinkScraper.py  article_handler.py  firestore_article_link_adapter.py  link_scraper.py
ArticleService/tests/: test_GCPHandler.py  test_LinkScraper.py  test_mtg_article_pytest.py
ArticleService/tests/integration/: test_LinkScraper_integration.py  test_link_scraper_integration.py
ArticleService/tests/performance/: test_LinkScraper_performance.py  test_link_scraper_performance.py
ArticleService/tests/unit/: test_GCPHandler.py  test_LinkScraper.py  test_article_handler.py  test_firestore_article_link_adapter.py  test_link_scraper.py  test_mtg_article_pytest.py
